kube/deploy/core/storage/rook-ceph/app/csi-addons-netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app csi-addons-system
  namespace: *app
spec:
  endpointSelector: {}
  egress:
    # allow access to apiserver
    - toEntities:
        - kube-apiserver
    # allow access to Rook-Ceph's rbdplugin which has csi-addons listener
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: "rook-ceph"
            app: "csi-rbdplugin"
        - matchLabels:
            io.kubernetes.pod.namespace: "rook-ceph"
            app: "csi-rbdplugin-provisioner"
        - matchLabels:
            io.kubernetes.pod.namespace: "rook-ceph"
            app: "csi-cephfsplugin"
        - matchLabels:
            io.kubernetes.pod.namespace: "rook-ceph"
            app: "csi-cephfsplugin-provisioner"
      toPorts:
        - ports:
            - port: "9070"
