kube/deploy/core/storage/rook-ceph/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app rook-ceph
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # external Ceph cluster
    - fromCIDRSet:
        - cidr: "${IP_PVE_CEPH_CIDR}"
    # csi-addons # TODO: improve by matching more specifically on ingress rook-ceph/rbdplugin side
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: "csi-addons-system"
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # external Ceph cluster
    - toCIDRSet:
        - cidr: "${IP_PVE_CEPH_CIDR}"
    # k8s apiserver
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ceph-rgw-${CLUSTER_NAME}
spec:
  endpointSelector:
    matchLabels:
      s3.home.arpa/store: rgw-${CLUSTER_NAME}
  egress:
    - toEndpoints:
        - matchLabels:
            rgw: "${CLUSTER_NAME}"
            io.kubernetes.pod.namespace: rook-ceph
    - toFQDNs:
        - matchName: "rgw-biohazard.${DNS_TS}"
    - toCIDRSet:
        - cidr: "${IP_VLAN_CEPH_CIDR}"
      toPorts:
        - ports:
            - port: "6953"
    - toEntities:
        - "host"
        - "remote-node"
      toPorts:
        - ports:
            - port: "6953"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app ceph-rgw
  namespace: &ns rook-ceph
spec:
  endpointSelector:
    matchLabels:
      rgw: "${CLUSTER_NAME}"
  ingress:
    # ingress controller
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress
            app.kubernetes.io/name: ingress-nginx
    # allow CNPG to connect
    - fromEndpoints:
        - matchExpressions:
            - key: cnpg.io/cluster
              operator: Exists
            - key: io.kubernetes.pod.namespace
              operator: Exists
    # allow pods with rgw label to connect
    - fromEndpoints:
        - matchLabels:
            s3.home.arpa/store: rgw-${CLUSTER_NAME}
        - matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
